# Calculator

./: CMakeLists.txt  Makefile  README.md  main.c  main.cpp
include/: BinaryOperation.h  Expression.h  Number.h  NumberSystemConverter.h  Utils.h
src/: BinaryOperation.cpp  Expression.cpp  Number.cpp  NumberSystemConverter.cpp  Utils.cpp  main.cpp
src/frontend/: main.cpp
tests/: BaseOperationsTests.cpp  CMakeLists.txt  ExpressionTests.cpp  ExpressionTests_shared_ptr_string_error.cpp  NumberSystemConverterTests.cpp  Test.h  main_test.cpp
